--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<div>
 							<span class="icon fa-bug"></span>
 							<h3>Future-proofing Skills</h3>
-							<p>Preparing communities with the skillsets to thrive tomorrow</p>
+							<p>Preparing communities to thrive on the edge of tomorrow</p>
 						</div>
 
 					</div>
