--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<div>
 							<span class="icon fa-camera"></span>
 							<h3>Universal Basic Assets</h3>
-							<p>A core, basic set of resources that every person <br/> is entitled to</p>
+							<p>Promote a core, basic set of resources that every person <br/> is entitled to</p>
 						</div>
 
 						<div>
