--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							<header>
 								<h3>FairLinkDC<br /> </h3>
 							</header>
-							<p>Internet usage is becoming a critical part of our lives <br /> when we rely on external stakeholders we will be unprepared to have access to things when we need them the most. Using a mesh network neighborhoods can build a strong foundation towards empowerment and building a community operating system.</p>
+							<p>Internet usage is becoming a critical part of our lives <br /> when we rely on external stakeholders we will be unprepared to have access to things when we need them the most. By using a mesh networks, neighborhoods can build a stronger foundation of empowerment and build a community operating system that uplifts everyone.</p>
 							<footer>
 								<a href="#" class="button">More details (coming soon)</a>
 							</footer>
@@ -90,7 +90,7 @@
 							<header>
 								<h3>Future-proofing<br /> </h3>
 							</header>
-							<p>Future-proofing is the process of anticipating <br />fthe future and developing methods of minimizing the effects of shocks and stresses of future events.<br /> Helping communities gain flexibility and new skillsets that will enable shared prosperity is critical to an equitable future.</p>
+							<p>Future-proofing is "the process of anticipating <br />the future and developing methods of minimizing the effects of shocks and stresses of future events."<br /> Helping communities gain flexibility and adopt new skillsets that will enable shared prosperity is critical to an equitable future.</p>
 							<footer>
 								<a href="#" class="button">More details (coming soon)</a>
 							</footer>
