--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							<header>
 								<h3>FairLinkDC<br /> </h3>
 							</header>
-							<p>Internet usage is becoming a critical part of our lives <br /> when we rely on external stakeholders we will be unprepared to have access to things when we need them the most. By using a mesh networks, neighborhoods can build a stronger foundation of empowerment and build a community operating system that uplifts everyone.</p>
+							<p>Internet usage is becoming a critical part of our lives <br /> as rely on external parties for almost all of our communications. In a world, interrupted we will be unprepared in our hour of need with out community-ownership models from infrastructure to hyper local apps. By using mesh networks, neighborhoods can build a stronger foundation that will allow residents greater control of in their communities.</p>
 							<footer>
 								<a href="#" class="button">More details (coming soon)</a>
 							</footer>
