--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
                         <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
                         <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_dc3044b12d5ed9326a4f973a7_daad04645d" tabindex="-1" value=""></div>
+                        <div><input type="text" name="b_dc3044b12d5ed9326a4f973a7_daad04645d" tabindex="-1" value=""></div>
                         <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
                         </div>
                     </form>
