--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 					<a href="index.html" class="logo"><strong>FairDC</strong></a>
 					<nav id="nav">
 						<a href="index.html">Home</a>
-						<a href="generic.html">About</a>
-						<a href="elements.html">Projects</a>
+						<a>About</a>
+						<a>Projects</a>
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 				</div>
