--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<div>
 							<span class="icon fa-car"></span>
 							<h3>Community-ownership</h3>
-							<p>Provide access to decentralized internet infrastructures and services</p>
+							<p>Provide access to decentralized internet infrastructures <br/>and services</p>
 						</div>
 
 						<div>
