--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 						<div>
 							<span class="icon fa-camera"></span>
-							<h3>Universal Basic Assets</h3>
+							<h3><a href="https://medium.com/institute-for-the-future/universal-basic-assets-abb08ca2f0fc">Universal Basic Assets</a></h3>
 							<p>Promote a core, basic set of resources that every person <br/> is entitled to</p>
 						</div>
 
