--- a/index.html
+++ b/index.html
@@ -42,19 +42,18 @@
 
 						<div>
 							<span class="icon fa-car"></span>
-							<h3>Community-ownership</h3>
-							<p>Provide access to decentralized internet infrastructures <br/>and services</p>
+							<h3>Community Intranet</h3>
+							<p>Connect with others at lower to no-cost</p>
 						</div>
 
 						<div>
 							<span class="icon fa-camera"></span>
-							<h3><a href="https://medium.com/institute-for-the-future/universal-basic-assets-abb08ca2f0fc">Universal Basic Assets</a></h3>
-							<p>Promote a core, basic set of resources that every person <br/> is entitled to</p>
+							<h3><a href="https://medium.com/institute-for-the-future/universal-basic-assets-abb08ca2f0fc">Universal Basic Assets</a></p>
 						</div>
 
 						<div>
 							<span class="icon fa-bug"></span>
-							<h3>Future-proofing Skills</h3>
+							<h3>Futuristic Consulting</h3>
 							<p>Preparing communities to thrive on the edge of tomorrow</p>
 						</div>
 
