--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 
 						<div>
 							<span class="icon fa-camera"></span>
-							<h3><a href="https://medium.com/institute-for-the-future/universal-basic-assets-abb08ca2f0fc">Universal Basic Assets</a></p>
+							<h3>UBA</h3>
+							<p/><a href="https://medium.com/institute-for-the-future/universal-basic-assets-abb08ca2f0fc">Universal Basic Assets</a>
 						</div>
 
 						<div>
