--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
 
 						<div>
 							<span class="icon fa-car"></span>
-							<h3>Community Intranet</h3>
+							<h3>Community Owned Internet</h3>
 							<p>Connect with others at lower to no-cost</p>
 						</div>
 
 						<div>
 							<span class="icon fa-camera"></span>
-							<h3>UBA</h3>
-							<p/><a href="https://medium.com/institute-for-the-future/universal-basic-assets-abb08ca2f0fc">Universal Basic Assets</a>
+							<h3>Universal Basic Assets</h3>
+							<p/><a href="https://medium.com/institute-for-the-future/universal-basic-assets-abb08ca2f0fc">Overview of UBA</a>
 						</div>
 
 						<div>
 							<span class="icon fa-bug"></span>
-							<h3>Futuristic Consulting</h3>
+							<h3>Social Futures Consulting</h3>
 							<p>Preparing communities to thrive on the edge of tomorrow</p>
 						</div>
 
