--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							<header>
 								<h3>FairLinkDC<br /> </h3>
 							</header>
-							<p>Internet usage is becoming a critical part of our lives <br /> as rely on external parties for almost all of our communications. In a world, interrupted we will be unprepared in our hour of need with out community-ownership models from infrastructure to hyper local apps. By using mesh networks, neighborhoods can build a stronger foundation that will allow residents greater control of in their communities.</p>
+							<p>Internet usage is becoming a critical part of our daily lives <br /> from news, food, travel and other essential needs. In a world, interrupted, whether by natural diaster or otherwise, community-owned internet is a safe and reliable choice towards staying conncted.</p>
 							<footer>
 								<a href="#" class="button">More details (coming soon)</a>
 							</footer>
@@ -90,7 +90,7 @@
 							<header>
 								<h3>Future-proofing<br /> </h3>
 							</header>
-							<p>Future-proofing is "the process of anticipating <br />the future and developing methods of minimizing the effects of shocks and stresses of future events."<br /> Helping communities gain flexibility and adopt new skillsets that will enable shared prosperity is critical to an equitable future.</p>
+							<p>Future-proofing is "the process of anticipating <br />the future and developing methods of minimizing the effects of shocks and stresses of future events."<br /> We help communities make changes for a future of shared prosperity.</p>
 							<footer>
 								<a href="#" class="button">More details (coming soon)</a>
 							</footer>
