--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
 			<footer id="footer">
 				<div class="inner">
 
-					<h3>Get in touch - <a href="mailto:hello@fairdc.org">hello@fairdc.org</a></h3>
+					<h3>Get in touch</h3>
+					<p/> <a href="mailto:hello@fairdc.org">hello@fairdc.org</a>
                   
 			</footer>
 
