--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				<div class="inner">
 
 					<h3>Get in touch</h3>
-					<p/> <a href="mailto:hello@fairdc.org">hello@fairdc.org</a>
+					<p> <a href="mailto:hello@fairdc.org">hello@fairdc.org</a></p>
                   
 			</footer>
 
