--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 				<div class="inner">
 					<header>
 						<h1>Welcome to FairDC</h1>
+						<h2>See a list of our upcoming projects below</h2>
 					</header>
 
 					<div class="flex ">
@@ -54,7 +55,7 @@
 
 						<div>
 							<span class="icon fa-bug"></span>
-							<h3>Social Futures Consulting</h3>
+							<h3>Disruption Consulting</h3>
 							<p>Helping communities thrive on the<br/>edge of tomorrow</p>
 						</div>
 
@@ -76,11 +77,13 @@
 								<img src="images/pic01.jpg" alt="Pic 01" />
 							</div>
 							<header>
-								<h3>FairLinkDC<br /> </h3>
+								<h3>Fairlink DC<br /> </h3>
 							</header>
 							<p>Internet usage is becoming a critical part of our daily lives <br /> from news, food, travel and other essential needs. In a world, interrupted, whether by natural diaster or otherwise, community-owned internet is a safe and reliable choice towards staying conncted.</p>
 							<footer>
-								<a href="#" class="button">More details (coming soon)</a>
+								<a href="#" class="button">Join (coming soon)</a>
+								<p><a href="mailto:hello@fairdc.org">Email us</a> for more details</p>
+
 							</footer>
 						</article>
 						<article>
@@ -92,7 +95,9 @@
 							</header>
 							<p>Future-proofing is "the process of anticipating <br />the future and developing methods of minimizing the effects of shocks and stresses of future events."<br /> We help communities make changes for a future of shared prosperity.</p>
 							<footer>
-								<a href="#" class="button">More details (coming soon)</a>
+								<a href="#" class="button">Join (coming soon)</a>
+								<p><a href="mailto:hello@fairdc.org">Email us</a> for more details</p>
+
 							</footer>
 						</article>
 					</div>
