--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<div class="inner">
 					<header>
 						<h1>Welcome to FairDC</h1>
-						<h2>See a list of our upcoming projects below</h2>
+						<h3>We want DC to be inclusive, equitable and fair. Check out our interest areas below.</h3>
 					</header>
 
 					<div class="flex ">
