--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 
 						<div>
 							<span class="icon fa-bug"></span>
-							<h3>Disruption Consulting</h3>
-							<p>Helping communities thrive on the<br/>edge of tomorrow</p>
+							<h3>Future-based Consulting</h3>
+							<p>Solving complexe problems and helping cities and communities thrive on the<br/>edge of tomorrow.</p>
 						</div>
 
 					</div>
