--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 				<div class="inner">
 					<header>
 						<h1>Welcome to FairDC</h1>
-						<h3>We want DC to be inclusive, equitable and fair. Check out our interest areas below.</h3>
+						<h3>We want DC to be inclusive, equitable and fair.</h3>
+						<p/><h3>Check out some of our interests below:</h3>
 					</header>
 
 					<div class="flex ">
