--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
 						<div>
 							<span class="icon fa-car"></span>
-							<h3>Community Owned Internet</h3>
-							<p>Connect with others at lower to no-cost</p>
+							<h3>Community-Owned Internet</h3>
+							<p>What if you didn't have to pay for internet acces?</p>
 						</div>
 
 						<div>
