--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<div>
 							<span class="icon fa-camera"></span>
 							<h3>Universal Basic Assets</h3>
-							<p/><a href="https://medium.com/institute-for-the-future/universal-basic-assets-abb08ca2f0fc">Overview of UBA</a>
+							<p/>Starting a <a href="https://medium.com/institute-for-the-future/universal-basic-assets-abb08ca2f0fc">UBA</a> program in DC.
 						</div>
 
 						<div>
