--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<div>
 							<span class="icon fa-car"></span>
 							<h3>Community-Owned Internet</h3>
-							<p>What if you didn't have to pay for internet acces?</p>
+							<p>What if you didn't have to pay for internet access?</p>
 						</div>
 
 						<div>
