--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<div>
 							<span class="icon fa-bug"></span>
 							<h3>Future-based Consulting</h3>
-							<p>Solving complexe problems and helping cities and communities thrive on the<br/>edge of tomorrow.</p>
+							<p>As technological and social disruption continue to complicate societal challenges, there are opportunities to consult with the future and learn to control disruptive forces be helping cities, communities and people harness the forces of change.
 						</div>
 
 					</div>
