--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
 			<footer id="footer">
 				<div class="inner">
 
-					<h3>Send us a note 
-					<a href="mailto:hello@fairdc.org">hello@fairdc.org</a></h3><p/> |
+					<h3>Send us a note - 
+					<a href="mailto:hello@fairdc.org">hello@fairdc.org</a> or our survey below</h3><p/> 
 <a class="typeform-share button" href="https://fairdc.typeform.com/to/DOZQUY" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#626262;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank">Join Us Today </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
