--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
 						<div>
 							<span class="icon fa-bug"></span>
 							<h3>Future-based Consulting</h3>
-							<p>As technological and social disruption continue to complicate societal challenges, there are opportunities to consult with the future and learn to control disruptive forces be helping cities, communities and people harness the forces of change.
+							<p>As technological and social disruption continue affect society,
+								there are opportunities to consult with the future. The majority of crisis that we see today 
+								requires the transformation of the global system. We need to find ways to harness the forces of change that hold an emerging reality that we want to be a part of rather clinging to the past. 
+								We need to co-create ways of a collective response that will help cities, communities and people create resilient and equitable systems of shared prosperity.
 						</div>
 
 					</div>
@@ -80,7 +83,9 @@
 							<header>
 								<h3>Fairlink DC<br /> </h3>
 							</header>
-							<p>Internet usage is becoming a critical part of our daily lives <br /> from news, food, travel and other essential needs. In a world, interrupted, whether by natural diaster or otherwise, community-owned internet is a safe and reliable choice towards staying conncted.</p>
+							<p>Internet usage is becoming a critical part of our daily lives <br /> from news, food, travel and other essential needs. 
+								In a world, interrupted, whether by natural diaster or otherwise, community-owned internet 
+								is a safe and reliable choice towards staying conncted.</p>
 							<footer>
 								<a href="#" class="button">Join (coming soon)</a>
 								<p><a href="mailto:hello@fairdc.org">Email us</a> for more details</p>
