--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 							<span class="icon fa-bug"></span>
 							<h3>Future-based Consulting</h3>
 							<p>As technological and social disruption continue affect society,
-								there are opportunities to consult with the future. The majority of crisis that we see today 
-								requires the transformation of the global system. We need to find ways to harness the forces of change that hold an emerging reality that we want to be a part of rather clinging to the past. 
+								there are opportunities to consult with the future. The majority of human issues that we see today 
+								require transformation of the global and local systems. Collectiely, we need to find ways to harness the forces of change that hold an emerging reality that we want to be a part of rather than clinging to the past. 
 								We need to co-create ways of a collective response that will help cities, communities and people create resilient and equitable systems of shared prosperity.
 						</div>
 
