--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 							<header>
 								<h3>Future-proofing<br /> </h3>
 							</header>
-							<p>Future-proofing is "the process of anticipating <br />the future and developing methods of minimizing the effects of shocks and stresses of future events."<br /> We help communities make changes for a future of shared prosperity.</p>
+							<p>Future-proofing is "the process of anticipating <br />the future and developing methods of minimizing the effects of shocks and stresses of future events."<br /> We help communities make changes for a future of shared prosperity. We've created a new framework inspired by luminaries of social labs, U-Theory, Lean-Agile Design and Human Centered Design to develop ways we all can co-create the future. </p>
 							<footer>
 								<a href="#" class="button">Join (coming soon)</a>
 								<p><a href="mailto:hello@fairdc.org">Email us</a> for more details</p>
